--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
     </head>
     <!-- End of Head -->
 
+    <!-- Beginning of Body -->
     <body>
+
+        <!-- Jumbotron Header -->
         <header class="jumbotron">
             <h1 class="display-3">Work Day Scheduler</h1>
             <p class="lead">A simple calendar app for scheduling your work day</p>
             <p id="currentDay" class="lead"></p>
         </header>
+        <!-- End of Jumbotron Header -->
 
         <!-- Beginning of Grid -->
         <div class="container">
