--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <!-- Input Column -->
-                <div id="to-do-input-colum" class="col-md-8">
+                <div id="to-do-input-column" class="col-md-8">
 
 
 
@@ -88,11 +88,12 @@
         </div>
         <!-- End of Grid -->
 
+        <!-- JQuery -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
         <!-- My JS -->
         <script src="script.js" type="text/javascript"></script>
 
-        <!-- Bootstrap JQuery? -->
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
 </html>
