--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <!-- Input Column -->
-                <div id="to-do-input-column" class="col-md-8">
+                <div id="input-column" class="col-md-8">
 
 
 
